# egregore

./: .checkov.yaml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.corp  Makefile  README.md  config.py  docker-compose.dev.yml  docker-compose.secure.yml  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
backend/api/: .env.example  Makefile  README.md  pyproject.toml
backend/api/src/authz/: model.fga
backend/api/src/bootstrap/: bus_lifecycle.py  catalog_loader.py  container.py  paths.py  product_loader.py  settings.py
backend/api/src/connectors/: __init__.py
backend/api/tests/adversarial/: conftest.py  test_authz_enforce.py  test_bus_escalation_path.py  test_hitl_approval_bypass.py  test_memory_tenant_isolation.py
backend/api/tests/api/: conftest.py  test_approvals_pending.py  test_auth.py  test_catalog_seed.py  test_engagement_start_async.py  test_engagement_stream_hitl.py  test_engagements_api.py  test_tenant_bind.py
backend/api/tests/application/: port_fakes.py  test_conductor_routing.py  test_domain_event_adapter.py  test_list_turns_synthetic.py  test_quality_router.py  test_start_engagement_sanitizes_goal.py  test_start_work_order_intent.py
backend/api/tests/bootstrap/: test_bootstrap_product_packs.py  test_container.py  test_container_ingress.py  test_product_loader.py  test_settings_validation.py
backend/api/tests/bus/: test_redis_async_handler.py
backend/api/tests/connectors/: test_langfuse_trace.py
backend/api/tests/contracts/: test_product_pack_contract.py
backend/api/tests/domain/: test_domain_final_coverage.py  test_product_payloads.py  test_workers_hitl.py
backend/api/tests/infrastructure/: test_catalog_prod_contract.py  test_catalog_singleton_rebind.py  test_engagement_postgres_store.py  test_kafka_queue.py  test_main_cli.py  test_observability_backends.py  test_todo_store.py
backend/api/tests/ingress/: test_api.py  test_catalog_api.py  test_hitl_api.py  test_manual_investigation_routing.py
backend/api/tests/integration/: test_hitl_l1_resume.py
backend/api/tests/observability/: test_application_tracing.py  test_http_metrics.py  test_metrics.py
backend/api/tests/support/: recording_trace_backend.py
backend/api/tests/tool_gateway/: test_approval.py
backend/api/tests/worker/: test_hitl_resume_dispatch.py
backend/contracts/: Makefile  README.md  pyproject.toml
backend/contracts/src/bootstrap/: bus_lifecycle.py  catalog_seed_loaders.py  paths.py  persona_budget_loader.py  policy_defaults.py  settings.py
backend/contracts/src/migrations/: 003_agent_catalog_run_states.sql  005_tool_catalog.sql
backend/contracts/tests/: conftest.py
backend/contracts/tests/adversarial/: conftest.py
backend/contracts/tests/application/: test_memory_quality_models.py
backend/contracts/tests/bootstrap/: test_policy_defaults.py
backend/contracts/tests/contracts/: test_kafka_topics_k8s.py
backend/contracts/tests/control/: conftest.py
backend/contracts/tests/domain/: test_worker_job_factory.py
backend/contracts/tests/infrastructure/: test_catalog_memory.py  test_job_store_correlation.py  test_kafka_queue.py  test_redis_engagement_egress.py  test_redis_queue.py
backend/contracts/tests/integrations/: test_veil_mcp_contract.py
backend/contracts/tests/observability/: test_policy_gate.py
backend/contracts/tests/registry/: test_import_direction.py  test_product_context.py  test_product_context_edges.py
backend/model-gateway/: README.md  pyproject.toml
backend/model-gateway/scripts/: pytest_batches.sh  verify_import_boundaries.py
backend/model-gateway/src/bootstrap/: container.py  rate_limit.py  settings.py
backend/model-gateway/tests/adversarial/: test_model_gateway_security.py
backend/model-gateway/tests/architecture/: test_import_boundaries.py
backend/model-gateway/tests/bootstrap/: test_rate_limit.py  test_settings_validation.py
backend/model-gateway/tests/domain/: test_security_domain.py
backend/model-gateway/tests/model_gateway/: gateway_client.py  test_invoke_model.py  test_server.py
backend/shared/: Makefile  README.md  pyproject.toml
backend/shared/agents/: README.md
backend/shared/agents/personas/: README.md
backend/shared/agents/plans/: kill-chain-assessment.yaml
backend/shared/src/: main.py
backend/shared/tests/: conftest.py
backend/shared/tests/adversarial/: conftest.py  test_dow_budget.py  test_output_leakage.py  test_policy_platform.py  test_privilege_escalation.py
backend/shared/tests/api/: test_investigations_api.py  test_work_orders_intake.py
backend/shared/tests/application/: test_enqueue_worker_jobs.py  test_mode_policy_port.py  test_persona_ranking.py  test_plan_helpers.py  test_run_step.py  test_spawn_workspace_scope.py  test_start_work_order_intent.py  test_upsert_catalog_agent.py
backend/shared/tests/architecture/: test_layer_contracts.py
backend/shared/tests/bootstrap/: test_container_ingress.py  test_container_obs.py  test_observability_factory.py  test_settings_validation.py
backend/shared/tests/connectors/: test_siem_models.py
backend/shared/tests/domain/: test_domain_coverage_boost.py  test_domain_final_coverage.py
backend/shared/tests/infrastructure/: test_config.py  test_egress_streaming_callback.py  test_litellm_provider.py  test_monitor_policy.py  test_observability_backends.py
backend/shared/tests/ingress/: test_api.py  test_manual_investigation_routing.py
backend/shared/tests/integration/: test_hitl_l1_resume.py
backend/shared/tests/observability/: test_langfuse_client.py  test_logging_setup.py  test_propagation.py
backend/shared/tests/registry/: test_enrich_ioc.py  test_soc_tools.py
backend/shared/tests/skill_gateway/: test_load.py
backend/shared/tests/tool_gateway/: conftest.py  test_policy.py  test_server.py
backend/shared/tests/unit/: test_operator_intent.py
backend/tool-gateway/: .env.example  README.md  pyproject.toml
backend/tool-gateway/tests/: conftest.py
backend/worker/: .env.example  Makefile  README.md  pyproject.toml
backend/worker/tests/: conftest.py
(+2582 files in other folders)
