[project]
name = "cys-agi"
version = "0.1.0"
description = "Event-driven multi-agent cybersecurity platform with ephemeral sandbox workers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.0",
    "langchain>=1.3.6",
    "langchain-core>=1.4.0",
    "langfuse>=4.6.1",
    "pyyaml>=6.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "litellm>=1.86.1",
    "psycopg[binary]>=3.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rapidfuzz>=3.13.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.0",
    "structlog>=26.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "aiokafka>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast isolated tests",
    "integration: multi-module wiring",
    "adversarial: security abuse cases",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["cys_core/domain"]
omit = ["*/__init__.py"]

[tool.coverage.report]
fail_under = 100

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "httpx>=0.28.0",
]
