[project]
name = "egregore-contracts"
version = "0.1.0"
description = "Shared domain models, port interfaces, and generic infrastructure adapters for egregore's api/worker split — no fastapi, no agent-execution frameworks (langchain/langgraph/deepagents/litellm)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "psycopg[binary]>=3.3.0",
    "redis>=8.0.0",
    "aiokafka>=0.12.0",
    "structlog>=26.0.0",
    "httpx>=0.28.0",
    "rapidfuzz>=3.13.0",
    "pyyaml>=6.0",
    "pyjwt[crypto]>=2.10.0",
    "openfga-sdk>=0.10.4",
    "prometheus-client>=0.21.0",
    # Needed by cys_core.observability.http (mount_metrics) — used by both
    # the api service's app.py and the worker's own Tool Gateway FastAPI app.
    "fastapi>=0.115.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-psycopg>=0.50b0",
    # Base classes/schemas only (ModelConnector/ToolProviderPort port type
    # hints) — NOT the agent-execution engine. See plan §1.1/§0.2.
    "langchain-core>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cys_core", "src/bootstrap", "src/interfaces"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["bootstrap", "cys_core", "interfaces"]
