[project]
name = "egregore-model-gateway"
version = "0.1.0"
description = "Egregore Model Gateway — the network chokepoint for LLM calls (§22.9, docs/MICROSERVICES_SPLIT_PLAN.md). Symmetrical to the Tool Gateway: any agent runtime, regardless of framework, must route model calls through this service to get input sanitization, system-prompt-digest validation, and output-leakage guardrails enforced independent of the runtime's cooperation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "structlog>=26.0.0",
    "rapidfuzz>=3.13.0",
    "litellm>=1.60.0",
    "redis>=7.2.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
egregore-model-gateway = "interfaces.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# "." makes scripts.* importable from tests/architecture/ — in worker/tool-gateway
# this happens as a side effect of tests/conftest.py forcing a package-root sys.path
# insertion; model-gateway has no tests/conftest.py, so it needs an explicit entry.
pythonpath = ["src", "../..", "."]
markers = [
    "unit: fast isolated tests",
    "integration: multi-module wiring",
    "adversarial: abuse-case security regression tests",
]
addopts = "--strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cys_core", "src/interfaces", "src/bootstrap"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["bootstrap", "cys_core", "interfaces"]

[tool.coverage.run]
source = ["src/cys_core/domain"]
omit = ["*/__init__.py"]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ty>=0.0.1a25",
    "ruff>=0.15.21",
    "httpx>=0.28.0",
    "import-linter>=2.0",
]

# model-gateway's own layering (docs/MSP_BACKLOG.md §29.4, §54, §56.7): cys_core.domain
# (self-contained security guardrails/sanitizer) <- cys_core.application (use cases) <-
# bootstrap/interfaces. Scoped to what actually exists here, not copy-pasted from
# worker/tool-gateway's larger contract set (no cys_core.infrastructure/registry/runtime/
# middleware/observability/llm/persistence in this package).
[tool.importlinter]
root_package = "cys_core"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "domain_independent"
type = "forbidden"
source_modules = ["cys_core.domain"]
forbidden_modules = ["cys_core.application", "bootstrap", "interfaces"]

[[tool.importlinter.contracts]]
name = "application_only_domain"
type = "layers"
layers = ["cys_core.application", "cys_core.domain"]

[[tool.importlinter.contracts]]
name = "no_config_in_domain_application"
type = "forbidden"
source_modules = ["cys_core.domain", "cys_core.application"]
forbidden_modules = ["bootstrap", "interfaces"]
allow_indirect_imports = true
