[project]
name = "egregore"
version = "0.1.0"
description = "Event-driven multi-agent cybersecurity platform with ephemeral sandbox workers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "egregore-contracts",
    "egregore-worker",
    "deepagents>=0.4.0",
    "langchain>=1.3.6",
    "langchain-core>=1.4.0",
    "langfuse>=4.6.1",
    "pyyaml>=6.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "litellm>=1.86.1",
    "psycopg[binary]>=3.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rapidfuzz>=3.13.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
    "redis>=8.0.0",
    "aiokafka>=0.12.0",
    "structlog>=26.0.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "qdrant-client>=1.12.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-psycopg>=0.50b0",
    "pyjwt[crypto]>=2.10.0",
    "ruff>=0.15.17",
    "botocore>=1.43.40",
    "openfga-sdk>=0.10.4",
]

[tool.uv.sources]
egregore-contracts = { path = "../contracts", editable = true }
egregore-worker = { path = "../worker", editable = true }

[project.scripts]
egregore = "interfaces.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cys_core", "src/interfaces", "src/bootstrap", "src/connectors"]

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../.."]
markers = [
    "unit: fast isolated tests",
    "integration: multi-module wiring",
    "adversarial: security abuse cases",
]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src/cys_core/domain"]
omit = ["*/__init__.py"]

[tool.coverage.report]
fail_under = 100

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "import-linter>=2.0",
    "ty>=0.0.1a25",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = [
    "bootstrap",
    "connectors",
    "cys_core",
    "interfaces",
]

[tool.importlinter]
root_package = "cys_core"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "domain_independent"
type = "forbidden"
source_modules = ["cys_core.domain"]
forbidden_modules = [
    "cys_core.infrastructure",
    "cys_core.registry",
    "cys_core.runtime",
    "cys_core.middleware",
    "cys_core.security",
    "cys_core.observability",
    "cys_core.llm",
    "cys_core.persistence",
    "bootstrap",
    "interfaces",
]

[[tool.importlinter.contracts]]
name = "application_only_domain"
type = "layers"
layers = [
    "cys_core.application",
    "cys_core.domain",
]

[[tool.importlinter.contracts]]
name = "no_config_in_domain_application"
type = "forbidden"
source_modules = ["cys_core.domain", "cys_core.application"]
forbidden_modules = ["config", "bootstrap"]
allow_indirect_imports = true
unmatched_ignore_imports_alerting = "none"
ignore_imports = [
    "cys_core.application.use_cases.evaluate_trace_critic -> bootstrap",
    "cys_core.application.use_cases.run_step -> bootstrap",
    "cys_core.application.use_cases.seed_catalog -> bootstrap",
    "cys_core.application.use_cases.upsert_profile_policy -> bootstrap",
    "cys_core.application.tools.providers.sandbox -> bootstrap",
    "cys_core.application.use_cases.enqueue_follow_up -> bootstrap",
]
