[project]
name = "egregore-worker"
version = "0.1.0"
description = "Egregore worker service — consumes WorkerJob messages from the queue and runs the agent-execution runtime (LangChain/LangGraph today, swappable later without touching the api service). See docs/MICROSERVICES_SPLIT_PLAN.md."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "egregore-contracts",
    "deepagents>=0.4.0",
    "langchain>=1.3.6",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "litellm>=1.86.1",
    "langfuse>=4.6.1",
    "qdrant-client>=1.12.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.13.4",
    "structlog>=26.0.0",
    "httpx>=0.28.0",
    "rapidfuzz>=3.13.0",
    "pyyaml>=6.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
]

[tool.uv.sources]
egregore-contracts = { path = "../contracts", editable = true }

[project.scripts]
egregore = "interfaces.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "unit: fast isolated tests",
    "integration: multi-module wiring",
    "adversarial: security abuse cases",
]
addopts = "--strict-markers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cys_core", "src/interfaces", "src/bootstrap"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["bootstrap", "cys_core", "interfaces"]
